[package]
name = "actix-postgres"
version = "0.4.0"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "PostgreSQL integration for Actix framework."
repository = "https://github.com/aoyagikouhei/actix-postgres-rs"
keywords = ["actix", "postgresql"]
categories = ["network-programming", "asynchronous"]
readme = "Readme.md"
documentation = "https://docs.rs/actix-postgres"

[dependencies]
actix = "~0.13.0"
bb8-postgres = "~0.8.0"
thiserror = "~1.0.30"
