[package]
name = "simple"
version = "0.1.0"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-postgres = {path="../.."}
actix = { version="~0.13.0", features=["macros"]}
